# collab-invite

./: README.md  index.html  package-lock.json  package.json  vite.config.js
assets/: index-43Gbbvor.js  index-7RpWoME4.css  index-I1P1JUWp.js
ikut-services/: .env  compose.yaml
ikut-services/hello/: event_create.hurl  go.mod  go.sum  main.go
ikut-services/helloaxum/: Cargo.toml  Dockerfile  README.md  compose.yaml
ikut-services/helloaxum/db/migrations/: 20240804045151_create_users_table.sql  20240805020733_create_event_table.sql
ikut-services/helloaxum/src/: main.rs
ikut-services/helloaxum/tests/: draft.hurl
ikut-web/: README.md  package-lock.json  package.json
ikut-web/public/: index.html  manifest.json
ikut-web/src/: App.js  fullcalendar-config.js  index.js  offline-db.js
src/: App.jsx  App.svelte  main.js  main.jsx
