[package]
name = "helloaxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
